trash il heresy and button enabler

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,8 +18,8 @@
       <form class="form-horizontal well">
         <div class="control-group">
           <div class="controls">
-            <button type="submit" class="btn" id="save" disabled="disabled">Save</button>
-            <button type="submit" class="btn" id="cancel" disabled="disabled">Cancel</button>
+            <button type="submit" class="btn" id="save">Save</button>
+            <button type="submit" class="btn" id="cancel">Cancel</button>
           </div>
         </div>
       </form>
