--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
 <head>
     <%= render 'event_tmpls' %>
+    <%= render 'category_tmpls' %>
 
     <script id="app_controls" type="text/html">
       <form class="form-horizontal well">
