--- a/app/views/colloquies/edit.html.erb
+++ b/app/views/colloquies/edit.html.erb
@@ -4,10 +4,18 @@
   <div class="row-fluid">
 
     <div class="span8 offset2">
-      <h1>Edit colloquy</h1>
+      <h2>Event Editor</h2>
       <div id="uppo">
       </div>
-      <div id="items">
+      <ul id="tabster" class="nav nav-tabs">
+        <li class="active"><a href="#items" data-toggle="tab">Sessions</a></li>
+        <li><a href="#categories" data-toggle="tab">Categories</a></li>
+      </ul>
+      <div class="tab-content">
+        <div id="items" class="tab-pane active">
+        </div>
+        <div id="categories" class="tab-pane">
+        </div>
       </div>
       <div id="appo">
       </div>
