--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,12 +6,28 @@
 
     <script id="app_controls" type="text/html">
       <form class="form-horizontal well">
+
         <div class="control-group">
           <label class="control-label" for="name">Name</label>
           <div class="controls">
             <input name="name" type="text" value="{{name}}" />
           </div>
         </div>
+
+        <div class="control-group">
+          <label class="control-label" for="description">Description</label>
+          <div class="controls">
+            <input name="description" type="text" value="{{description}}" />
+          </div>
+        </div>
+
+        <div class="control-group">
+          <label class="control-label" for="seats">Seats</label>
+          <div class="controls">
+            <input name="seats" type="text" value="{{seats}}" />
+          </div>
+        </div>
+
       </form>
     </script>
 
