--- a/app/views/colloquies/edit.html.erb
+++ b/app/views/colloquies/edit.html.erb
@@ -4,7 +4,7 @@
   <div class="row-fluid">
 
     <div class="span8 offset2">
-      <h2>Event Editor</h2>
+      <h2>Eventor</h2>
       <div id="uppo">
       </div>
       <ul id="tabster" class="nav nav-tabs">
